supposed last edit

--- a/home.html
+++ b/home.html
@@ -298,16 +298,16 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <h4 class="text-center">Contact Us</h4>
+                                    <h4 class="text-center">Step 1; Contact Us</h4>
                                     <p>
                                         As part of our free consultation, we will size up your venue and identify
                                         the right scent diffusion system for maximum impact
                                     </p>
-                                    <h4 class="text-center">Choose your Fragrance</h4>
+                                    <h4 class="text-center">Step 2; Choose your Fragrance</h4>
                                     <p>
                                         From traditional to unconventional, from floral, fresh or fruity to sweets, food or drink.
                                     </p>
-                                    <h4 class="text-center">Relax and Enjoy</h4>
+                                    <h4 class="text-center">Step 3; Relax and Enjoy</h4>
                                     <p>
                                         As you create unforgettable memories for your party guests or make an extraordinary
                                         positive and lasting impact on your corporate clients.
@@ -505,6 +505,21 @@
                     <div class="col-sm-4">
                         <img class="img-fluid" src="assets/clients/Shelf%20drilling.jpg" />
                     </div>
+                    <div class="col-sm-4">
+                        <img class="img-fluid" src="assets/clients/Brass.jpg" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="img-fluid" src="assets/clients/Channels.jpg" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="img-fluid" src="assets/clients/Good%20hair.jpg" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="img-fluid" src="assets/clients/POW.jpg" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img class="img-fluid" src="assets/clients/The%20George.jpg" />
+                    </div>
                 </div>
             </div>
         </div>
@@ -514,15 +529,14 @@
                 <h2 class="title text-center">Contact Us</h2>
                 <p class="text-center text-white">Give us a call, send us a message or pop in to see us</p>
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <h4 class="address-title text-center">Head Office</h4>
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <h4 class="address-title">Head Office</h4>
                         <div class="row">
-                            <div class="col-sm-12 address-block">
+                            <div class="caddress-block">
                                 <div class="address ">
                                     <i class="now-ui-icons location_pin fa-3x"></i>
                                     <div class="">
-                                        Hillview <br/>
-                                        22 The Drive <br/>
+                                        Hillview 22 The Drive <br/>
                                         Coulsdon, Surrey <br/>
                                         CR5 2BL
                                     </div>
@@ -530,7 +544,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 address-block">
+                            <div class="address-block">
                                 <div class="address">
                                     <i class="now-ui-icons ui-1_email-85 fa-3x"></i>
                                     <div class="">
@@ -541,13 +555,50 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 address-block">
+                            <div class="address-block">
                                 <div class="address">
                                     <i class="now-ui-icons tech_mobile fa-3x"></i>
                                     <div class="address">
                                         <br/>
                                         +44(0) 20 3417 9936 <br/>
                                         +44(0) 77 7207 9050
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-6">
+                        <h4 class="address-title">Nigeria Address</h4>
+                        <div class="row">
+                            <div class="address-block">
+                                <div class="address ">
+                                    <i class="now-ui-icons location_pin fa-3x"></i>
+                                    <div class="">
+                                        7 Ibiyinka Olorounbe Close,<br/>
+                                        Victoria Island,<br/>
+                                        Lagos
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="address-block">
+                                <div class="address">
+                                    <i class="now-ui-icons ui-1_email-85 fa-3x"></i>
+                                    <div class="">
+                                        <br/>
+                                        info@cececa.com <br/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="address-block">
+                                <div class="address">
+                                    <i class="now-ui-icons tech_mobile fa-3x"></i>
+                                    <div class="address">
+                                        <br/>
+                                        09082069150 <br/>
                                     </div>
                                 </div>
                             </div>
