--- a/home.html
+++ b/home.html
@@ -568,7 +568,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6">
-                        <h4 class="address-title">Nigeria Address</h4>
+                        <h4 class="address-title">Lagos Office</h4>
                         <div class="row">
                             <div class="address-block">
                                 <div class="address ">
