supposed last edit

--- a/home.html
+++ b/home.html
@@ -298,16 +298,16 @@
                                     </p>
                                 </div>
                                 <div>
-                                    <h4 class="text-center">Step 1; Contact Us</h4>
+                                    <h4 class="text-center">Step 1: Contact Us</h4>
                                     <p>
                                         As part of our free consultation, we will size up your venue and identify
                                         the right scent diffusion system for maximum impact
                                     </p>
-                                    <h4 class="text-center">Step 2; Choose your Fragrance</h4>
+                                    <h4 class="text-center">Step 2: Choose your Fragrance</h4>
                                     <p>
                                         From traditional to unconventional, from floral, fresh or fruity to sweets, food or drink.
                                     </p>
-                                    <h4 class="text-center">Step 3; Relax and Enjoy</h4>
+                                    <h4 class="text-center">Step 3: Relax and Enjoy</h4>
                                     <p>
                                         As you create unforgettable memories for your party guests or make an extraordinary
                                         positive and lasting impact on your corporate clients.
